# tictoc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/tictoc/: __init__.py  tictoc.py
src/tictoc.egg-info/: PKG-INFO  SOURCES.txt
